# chess-cli

./: .gitignore  Cargo.toml  README.md  engines.toml
src/: main.rs  utils.rs
src/cli/: display.rs  input.rs  interface.rs  mod.rs
src/engine/: manager.rs  mod.rs  protocol.rs
src/game/: fen.rs  manager.rs  mod.rs  state.rs
