[package]
name = "chess-cli"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"
crossterm = "0.29.0"
anyhow = "1.0.98"
hashbrown = "0.15.3"
toml = "0.8.22"
dirs = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }